feat: implement comprehensive architecture fixes and improvements
- Fix RLS policies for organization creation with secure database function
- Centralize analytics initialization with environment-driven configuration
- Fix ESLint root configuration with proper TypeScript support
- Implement TypeScript project references for optimized build performance
- Resolve middleware duplication issues with TypeScript artifact prevention
- Clean up workspace configuration and remove unused directories
- Enhance database seed script with proper auth user creation
- Add comprehensive documentation of all architecture improvements

Breaking changes:
- Organization creation now uses secure RPC function instead of direct insertion
- Analytics initialization centralized in @nexus/analytics package
- TypeScript build artifacts now properly excluded from source tree

All critical architectural issues resolved with proper testing and verification.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# TypeScript artifacts (prevent duplicate files)
+**/*.d.ts
+**/*.js.map
+**/*.d.ts.map
+**/tsconfig.tsbuildinfo
+
 # Dependencies
 node_modules/
 
