--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -26,5 +26,15 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules",
+    "**/*.d.ts",
+    "**/*.js.map",
+    "**/*.d.ts.map", 
+    "**/tsconfig.tsbuildinfo"
+  ],
+  "references": [
+    { "path": "../../packages/types" },
+    { "path": "../../packages/analytics" }
+  ]
 }
