fix: resolve duplicate files issue and clean TypeScript configuration
- Add noEmit: true to root tsconfig.json to prevent global compilation
- Remove all compiled .js artifacts from apps/web/src directory
- Update .gitignore to prevent TypeScript compilation artifacts
- Configure packages/db to use dist directory for builds
- Fix Sentry configuration duplicate in next.config.js

This permanently resolves the duplicate page warnings in Next.js by ensuring
TypeScript only compiles to dedicated dist directories, not inline with source.

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
-  "main": "./index.ts",
-  "types": "./index.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
+    "build": "tsc",
+    "typecheck": "tsc --noEmit",
     "migrate": "node --import tsx scripts/migrate.ts",
     "seed": "node --import tsx seeds/seed.ts",
     "test": "vitest run"
