--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,16 @@
 # TypeScript artifacts (prevent duplicate files)
+**/*.js
 **/*.d.ts
 **/*.js.map
 **/*.d.ts.map
 **/tsconfig.tsbuildinfo
+# But allow specific config files
+!next.config.js
+!**/next.config.js
+!eslint.config.mjs
+!**/eslint.config.mjs
+!postcss.config.mjs
+!**/postcss.config.mjs
 
 # Dependencies
 node_modules/
