feat: complete Plaid integration implementation with production features
- Implement comprehensive Edge Function testing infrastructure with Deno
- Add missing API routes for transactions and connections list
- Add proper token encryption with AES-GCM replacing base64 encoding
- Enhance webhook security with HMAC-SHA256 signature verification
- Integrate PostHog analytics and Sentry error tracking for monitoring
- Create comprehensive production deployment documentation
- Fix routing structure moving connections page to /settings/connections
- Add Supabase Edge Functions configuration for production deployment
- Update all Edge Functions to use async decryption methods
- Create centralized monitoring utilities for sync operations tracking
- Document complete connections and integrations system architecture
- Update .gitignore to exclude test artifacts and large files

This completes milestone2implementation.md requirements with additional
production-ready enhancements including security, monitoring, and
comprehensive documentation for deployment and maintenance.

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,20 @@ pids
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+# Test artifacts and reports
+test-results/
+**/test-results/
+playwright-report/
+**/playwright-report/
+coverage/
+**/coverage/
+
+# Playwright specific artifacts
+**/*.trace
+**/*.zip
+**/*-retry*.network
+**/*-retry*.trace
+
+# Temporary Supabase files
+**/supabase/.temp/
