--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,10 +9,12 @@
     "start": "next start",
     "lint": "eslint",
     "test": "playwright test",
+    "test:unit": "vitest",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@nexus/analytics": "workspace:*",
+    "@nexus/shared": "workspace:*",
     "@nexus/types": "workspace:*",
     "@radix-ui/react-slot": "^1.2.3",
     "@sentry/nextjs": "^10.5.0",
@@ -25,10 +27,12 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.541.0",
     "next": "15.5.0",
+    "plaid": "^38.0.0",
     "posthog-js": "^1.260.2",
     "posthog-node": "^5.7.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-plaid-link": "^4.1.1",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.1"
   },
@@ -36,6 +40,8 @@
     "@eslint/eslintrc": "^3",
     "@playwright/test": "^1.55.0",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -43,8 +49,10 @@
     "dotenv": "^17.2.1",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
+    "jsdom": "^26.1.0",
     "playwright": "^1.55.0",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^3.2.4"
   }
 }
