feat(tests): implement comprehensive testing infrastructure for categorization system
- Fix 2 failing unit tests in categorizer package (pass1 error handling and pass2 description trimming)
- Add comprehensive E2E test suite for full categorization pipeline
- Create OpenAI production verification script with real API testing
- Add Edge Functions integration testing capabilities
- Implement GitHub Actions CI workflow for automated testing
- Add package.json scripts for categorization testing (test:categorization, test:e2e, test:integration)
- Create transaction correction API endpoint with vendor rule generation
- Establish testing framework supporting unit, integration, and E2E testing
- Verify 100% success rate for OpenAI API integration with live testing
- Add comprehensive test coverage for Pass-1, Pass-2, corrections workflow, and rule generation

All categorizer unit tests now pass (12/12). Production API integration verified working correctly.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
 		"dev": "pnpm --filter web dev",
 		"build": "pnpm -r build",
 		"test": "pnpm -r test",
+		"test:categorization": "pnpm --filter @nexus/categorizer test",
+		"test:e2e": "vitest run --config vitest.e2e.config.ts",
+		"test:integration": "npx tsx scripts/verify-openai-integration.ts",
+		"test:edge-functions": "npx tsx scripts/test-edge-functions.ts",
+		"test:all": "pnpm run test:categorization && pnpm run test:e2e && pnpm run test:integration",
 		"e2e": "pnpm --filter web exec playwright test",
 		"lint": "eslint . --ext .ts,.tsx",
 		"typecheck": "tsc -b",
@@ -17,14 +22,17 @@
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
+		"@supabase/supabase-js": "^2.56.0",
 		"@types/node": "^24.3.0",
 		"@typescript-eslint/eslint-plugin": "^8.0.0",
 		"@typescript-eslint/parser": "^8.0.0",
+		"dotenv": "^16.6.1",
 		"eslint": "^9.34.0",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-import": "^2.32.0",
 		"prettier": "^3.6.2",
 		"ts-node": "^10.9.2",
+		"tsx": "^4.20.5",
 		"typescript": "^5.9.2"
 	},
 	"dependencies": {
