--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
     "@nexus/analytics": "workspace:*",
     "@nexus/shared": "workspace:*",
     "@nexus/types": "workspace:*",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@sentry/nextjs": "^10.5.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
@@ -33,6 +34,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-plaid-link": "^4.1.1",
+    "recharts": "^3.1.2",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.1"
   },
