--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,7 +16,11 @@
     "@nexus/analytics": "workspace:*",
     "@nexus/shared": "workspace:*",
     "@nexus/types": "workspace:*",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@sentry/nextjs": "^10.5.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
@@ -24,8 +28,10 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.56.0",
     "@tanstack/react-query": "^5.85.5",
+    "@tanstack/react-virtual": "^3.13.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "lucide-react": "^0.541.0",
     "next": "15.5.0",
     "plaid": "^38.0.0",
