--- a/packages/categorizer/package.json
+++ b/packages/categorizer/package.json
@@ -18,10 +18,15 @@
     "test": "vitest",
     "test:watch": "vitest --watch"
   },
-  "keywords": ["categorization", "machine-learning", "financial"],
+  "keywords": [
+    "categorization",
+    "machine-learning",
+    "financial"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@nexus/analytics": "workspace:*",
     "@nexus/types": "workspace:*",
     "@supabase/supabase-js": "^2.0.0"
