feat: implement categorizer lab testing suite with comprehensive fixes
## Overview
Complete implementation of frontend testing suite for categorization engine
with metrics, visualizations, and export functionality.

## New Features
- Interactive dataset loader (file upload, synthetic data, test scenarios)
- Configurable engine controls (Pass-1, Pass-2, Hybrid modes)
- Real-time progress tracking and error handling
- Comprehensive results table with search/filter/sort
- Metrics dashboard (accuracy, precision, recall, F1, confusion matrix)
- Data visualizations and export capabilities
- Feature flag gating for development isolation

## Frontend Components Added
- apps/web/src/app/(dev)/categorizer-lab/ - Main lab interface
- apps/web/src/components/categorizer-lab/ - UI components
- apps/web/src/lib/categorizer-lab/ - Supporting utilities
- apps/web/src/lib/flags.ts - Feature flag management
- apps/web/src/app/not-found.tsx - 404 error page

## API Implementation
- apps/web/src/app/api/dev/categorizer-lab/run/ - Categorization endpoint
- apps/web/src/app/api/dev/categorizer-lab/health/ - Health check
- Comprehensive unit tests for API functionality

## E2E Testing
- apps/web/tests/e2e/categorizer-lab.spec.ts - Full user flow testing
- File upload, synthetic data generation, result validation
- Progress tracking and completion flow verification

## Major Fixes Applied

### 1. Module Resolution Issues
- Fixed categorizer package compilation (packages/categorizer/tsconfig.json)
- Added TypeScript project references (apps/web/tsconfig.json)
- Added workspace dependency (apps/web/package.json)
- Built categorizer package dist files

### 2. Type System Corrections
- Updated API route to use proper NormalizedTransaction types
- Fixed CategorizationContext type assertions
- Corrected function signatures and return types
- Enhanced error handling with proper type propagation

### 3. Test Infrastructure Improvements
- Enabled Vitest globals for unit tests (apps/web/vitest.confi

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -35,6 +35,7 @@
   ],
   "references": [
     { "path": "../../packages/types" },
-    { "path": "../../packages/analytics" }
+    { "path": "../../packages/analytics" },
+    { "path": "../../packages/categorizer" }
   ]
 }
