--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@anthropic-ai/claude-code": "1.0.88",
     "@nexus/analytics": "workspace:*",
+    "@nexus/categorizer": "workspace:*",
     "@nexus/shared": "workspace:*",
     "@nexus/types": "workspace:*",
     "@radix-ui/react-checkbox": "^1.3.3",
