fix: reorder workspace package builds to respect dependencies in Docker
- Build @nexus/types first (foundational package with no deps)
- Build @nexus/shared and @nexus/analytics next (independent packages)
- Build @nexus/categorizer last (depends on types and analytics)
- Resolves TypeScript compilation errors in Railway deployment
- Ensures packages build in correct dependency order

--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -57,11 +57,11 @@ COPY packages/types ./packages/types
 # Copy web app source
 COPY apps/web ./apps/web
 
-# Build workspace packages first
+# Build workspace packages first (in dependency order)
+RUN pnpm --filter "@nexus/types" build
+RUN pnpm --filter "@nexus/shared" build
 RUN pnpm --filter "@nexus/analytics" build
 RUN pnpm --filter "@nexus/categorizer" build
-RUN pnpm --filter "@nexus/shared" build
-RUN pnpm --filter "@nexus/types" build
 
 # Build the web application
 RUN pnpm --filter "web" build
