--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -32,9 +32,11 @@
     "@supabase/supabase-js": "^2.56.0",
     "@tanstack/react-query": "^5.85.5",
     "@tanstack/react-virtual": "^3.13.12",
+    "@types/ioredis": "^5.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "ioredis": "^5.7.0",
     "lucide-react": "^0.541.0",
     "next": "15.5.0",
     "plaid": "^38.0.0",
