feat: implement e-commerce switch with comprehensive categorization system
- Add centralized taxonomy system supporting both salon and e-commerce industries
- Implement industry-aware prompt builder with e-commerce specific context
- Create 38 e-commerce categories covering revenue, COGS, and operating expenses
- Add enhanced guardrails preventing refunds/returns from mapping to revenue
- Implement Pass-1 rules engine with 84+ vendor/keyword/MCC patterns
- Deploy historical recategorization job for industry switches
- Add comprehensive test coverage with 218 passing unit tests
- Deploy all edge functions with e-commerce categorizer support
- Create database migrations for e-commerce taxonomy and rules
- Add comprehensive documentation covering complete implementation

Key components:
- packages/categorizer/src/taxonomy.ts: Centralized category system
- packages/categorizer/src/prompt.ts: Industry-specific prompts
- packages/categorizer/src/config.ts: Industry detection and configuration
- packages/categorizer/src/guardrails.ts: E-commerce specific guardrails
- apps/edge/jobs/recategorize-historical/: Historical recategorization
- docs/ecommerce-switch-implementation.md: Complete implementation guide

Database migrations ready:
- 015_ecommerce_taxonomy.sql: Seeds e-commerce categories
- 016_pass1_rules_ecommerce.sql: Seeds vendor/keyword/MCC rules

Edge functions deployed to Supabase project bbeqsixddvbzufvtifjt with fixes for:
- Google Generative AI import resolution
- TypeScript import path compatibility
- Package dependency copying for categorizer

Quality improvements following CLAUDE.md standards:
- Refactored vendor normalization with extracted logic
- Enhanced confidence calibration with clear edge case handling
- Resolved pattern priority overlap issues
- Added comprehensive comments and named constants

--- a/packages/categorizer/package.json
+++ b/packages/categorizer/package.json
@@ -37,6 +37,7 @@
     "@typescript-eslint/eslint-plugin": "^8",
     "@typescript-eslint/parser": "^8",
     "eslint": "^9",
+    "fast-check": "^3.0.0",
     "typescript": "^5",
     "vitest": "^1.0.0"
   }
