--- a/packages/categorizer/package.json
+++ b/packages/categorizer/package.json
@@ -29,7 +29,8 @@
     "@google/generative-ai": "^0.24.1",
     "@nexus/analytics": "workspace:*",
     "@nexus/types": "workspace:*",
-    "@supabase/supabase-js": "^2.0.0"
+    "@supabase/supabase-js": "^2.0.0",
+    "safe-regex": "^2.1.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
