--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -39,6 +39,8 @@
     "ioredis": "^5.7.0",
     "lucide-react": "^0.541.0",
     "next": "15.5.0",
+    "nexus-categorizer": "^1.0.0",
+    "nexus-types": "^0.1.0",
     "plaid": "^38.0.0",
     "posthog-js": "^1.260.2",
     "posthog-node": "^5.7.0",
